# TangoAccessControl

./: AccessControl.cpp  AccessControl.h  AccessControlClass.cpp  AccessControlClass.h  AccessControlStateMachine.cpp  ClassFactory.cpp  DbUtils.cpp  Makefile  Makefile.am  Makefile.in  README.md  ReleaseNotes  TangoAccessControl.cpp  TangoAccessControl.h  TangoAccessControl.xmi  TangoAccessControlClass.cpp  TangoAccessControlClass.h  TangoAccessControlStateMachine.cpp  main.cpp
AbstractClasses/: AccessControl.cpp  AccessControl.h  AccessControl.xmi  AccessControlClass.cpp  AccessControlClass.h  AccessControlStateMachine.cpp  Makefile.am  Makefile.in
TangoAccessControl/: CMakeLists.txt  ClassFactory.cpp  DbUtils.cpp  Makefile  Makefile.am  Makefile.in  ReleaseNotes  TangoAccessControl.cpp  TangoAccessControl.h  TangoAccessControl.xmi  TangoAccessControlClass.cpp  TangoAccessControlClass.h  TangoAccessControlStateMachine.cpp  main.cpp
TangoAccessControl/vc10_proj/: Class_dll.vcxproj  Class_dll.vcxproj.filters  Class_lib.vcxproj  Class_lib.vcxproj.filters  Server_shared.vcxproj  Server_static.vcxproj
TangoAccessControl/vc12_proj/: Class_lib.vcxproj  Class_lib.vcxproj.filters  Server_static.vcxproj  TangoAccessControl.sln
TangoAccessControl/vc9_proj/: Class_lib.vcproj  TangoAccessControl.sln
vc10_proj/: Class_lib.vcxproj.filters  Server_static.vcxproj
vc9_proj/: Server_static.vcproj
